added genre and top3 images

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/musicbg.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -48,3 +48,10 @@ header.masthead {
     }
   }
 }
+
+// .buttonview{
+//   margin-left: 121px;
+//     margin-top: -40px;
+  
+  
+//}
