--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url('../img/musicbg.jpg');
+  background-image: url("img/portfolio/piano.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
